--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project: Rock Paper Scissors</title>
   </head>
-  <body></body>
+  <body>
+    <button>Rock</button>
+    <button>Paper</button>
+    <button>Scissors</button>
+  </body>
   <script src="odin-rps.js"></script>
 </html>
